<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="6"
    android:rowCount="8"
    tools:context=".MainActivity" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="left"
        android:layout_marginBottom="5dp"
        android:layout_row="0"
        android:text="@string/first" 
        android:textSize="20dp"/>
     <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_row="1"
        android:text="@string/name1" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_marginBottom="5dp"
        android:layout_row="1"
        android:ems="10"
        android:hint="请填写登录账号" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_row="2"
        android:text="@string/password1" />

    <EditText
        android:id="@+id/psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_marginBottom="5dp"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPassword" />"
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
         android:layout_marginBottom="5dp"
        android:layout_row="3"
        android:text="@string/passwordok" />

    <EditText
        android:id="@+id/repsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
         android:layout_marginBottom="5dp"
        android:layout_row="4"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_row="4"
        android:ems="10"
        android:inputType="textPhonetic" />
     <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
         android:layout_marginBottom="5dp"
        android:layout_row="5"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_row="5"
        android:ems="10"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
         android:layout_marginBottom="5dp"
        android:layout_row="6"
        android:text="@string/sex" />
    
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_row="6"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioBoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boy" />

        <RadioButton
            android:id="@+id/radioGirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girl" />
    </RadioGroup>
    
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_row="7"
        android:text="@string/register"
        android:background="#269ee9" />    
</GridLayout>